Add delete account api